use --brand-bg for empty state card headers to fix dark mode rendering

--- a/app/assets/stylesheets/hera/views/issues/_issues.scss
+++ b/app/assets/stylesheets/hera/views/issues/_issues.scss
@@ -37,7 +37,7 @@ body.issues.index {
     }
 
     .card-header {
-      background: $primary;
+      background: var(--brand-bg);
       color: $white;
 
       .card-title {
